// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSheet.ts should render a tile paper 1`] = `
<div class="v-sheet v-sheet--tile theme--light">
</div>
`;

exports[`VSheet.ts should render component and match snapshot 1`] = `
<div class="v-sheet theme--light">
</div>
`;
